--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,7 +6,7 @@
     "hide_input": true
    },
    "source": [
-    "![](photos/UEFA.jpg)"
+    "<img src='photos/UEFA.jpg'>"
    ]
   },
   {
@@ -15,7 +15,7 @@
     "hide_input": false
    },
    "source": [
-    "![](photos/goals1.jpeg)"
+    "<img src='photos/goals1.jpeg'>"
    ]
   },
   {
