--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,7 +6,7 @@
     "hide_input": true
    },
    "source": [
-    "<img src='UEFA.jpg'>"
+    "<img src='photos/UEFA.jpg'>"
    ]
   },
   {
@@ -15,7 +15,7 @@
     "hide_input": false
    },
    "source": [
-    "<img src='goals1.jpeg'>"
+    "<img src='photos/goals1.jpeg'>"
    ]
   },
   {
